# cpp-generators

./: CMakeLists.txt  LICENSE  README.md
include/: generator.h  type_generator.h
include/generators/: gen_factory.h  gen_iterator.h  msft_gen_mod.h
src/: generator.h
test/: driver.cxx  makefile
win32/: generator.sln  generator.vcxproj  generator.vcxproj.filters
